--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>crypt-api</artifactId>
-	<version>7</version>
+	<version>7.1-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 
