--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>crypt-api</artifactId>
-	<version>7.2-SNAPSHOT</version>
+	<version>7.2</version>
 	<inceptionYear>2015</inceptionYear>
 
 	<name>${project.artifactId}</name>
