--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
+# project properties
+groupPackage=de.alpharogroup
+projectHolderUsername=astrapi69
+projectDescription=Provides interfaces for encrypting and decrypting bytes, text, and files
 projectVersion=7.4-SNAPSHOT
+
 testngVersion=7.1.0
 sillyCollectionsVersion=8
 meanbeanVersion=2.0.3
