--- a/build.gradle
+++ b/build.gradle
@@ -88,32 +88,32 @@ publishing {
             pom {
                 name = "$rootProject.name"
                 description = "$projectDescription"
-                url = "https://github.com/"+"$projectHolderUsername"+"/"+"$rootProject.name"
+                url = "$projectScmProviderUrl"+"$projectHolderUsername"+"/"+"$rootProject.name"
                 organization {
-                    name = "Alpha Ro Group UG (haftungsbeschrängt)"
-                    url = "http://www.alpharogroup.de/"
+                    name = "$projectOrganizationName"
+                    url = "$projectOrganizationUrl"
                 }
                 issueManagement {
-                    system = "GitHub"
-                    url = "https://github.com/"+"$projectHolderUsername"+"/"+"$rootProject.name"+"/issues"
+                    system = "$projectIssueManagementSystem"
+                    url = "$projectScmProviderUrl"+"$projectHolderUsername"+"/"+"$rootProject.name"+"/issues"
                 }
                 licenses {
                     license {
-                        name = "MIT License"
-                        url = "http://www.opensource.org/licenses/mit-license.php"
-                        distribution = "repo"
+                        name = "$projectLicenseName"
+                        url = "$projectLicenseUrl"
+                        distribution = "$projectLicenseDistribution"
                     }
                 }
                 developers {
                     developer {
-                        id = "astrapi69"
+                        id = "$projectHolderUsername"
                         name = "Asterios Raptis"
                     }
                 }
                 scm {
-                    connection = "scm:git:git:@github.com:"+"$projectHolderUsername"+"/"+"$rootProject.name"+".git"
-                    developerConnection = "scm:git:git:@github.com:"+"$projectHolderUsername"+"/"+"$rootProject.name"+".git"
-                    url = "scm:git:git:@github.com:"+"$projectHolderUsername"+"/"+"$rootProject.name"+".git"
+                    connection = "scm:git:git:@" + "$projectScmProviderDomain" + ":" + "$projectHolderUsername" + "/" + "$rootProject.name" + ".git"
+                    developerConnection = "scm:git:git:@" + "$projectScmProviderDomain" + ":" + "$projectHolderUsername" + "/" + "$rootProject.name" + ".git"
+                    url = "scm:git:git:@" + "$projectScmProviderDomain" + ":" + "$projectHolderUsername" + "/" + "$rootProject.name" + ".git"
                 }
             }
         }
@@ -124,8 +124,8 @@ publishing {
                 username System.getenv("ossrhUsername") ?: project.property("ossrhUsername")
                 password System.getenv("ossrhPassword") ?: project.property("ossrhPassword")
             }
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+            def releasesRepoUrl = "$projectRepositoriesReleasesRepoUrl"
+            def snapshotsRepoUrl = "$projectRepositoriesSnapshotsRepoUrl"
             url = releaseVersion ? releasesRepoUrl : snapshotsRepoUrl
         }
     }
