--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,22 @@
 groupPackage=de.alpharogroup
 projectHolderUsername=astrapi69
 projectDescription=Provides interfaces for encrypting and decrypting bytes, text, and files
+projectScmProviderDomain=github.com
+projectScmProviderUrl=https://github.com/
+projectLicenseName=MIT License
+projectLicenseUrl=http://www.opensource.org/licenses/mit-license.php
+projectOrganizationName=Alpha Ro Group UG (h.b.)
+projectOrganizationUrl=http://www.alpharogroup.de/
+projectLicenseDistribution=repo
+projectIssueManagementSystem=GitHub
+projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
 projectVersion=7.4-SNAPSHOT
 
-testngVersion=7.1.0
-sillyCollectionsVersion=8
+testngVersion=7.2.0
+sillyCollectionsVersion=8.2
 meanbeanVersion=2.0.3
+##########################
+# for deploy on sonatype #
+##########################
+systemProp.org.gradle.internal.publish.checksums.insecure=true
