--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+    }
+}
+
 plugins {
     id "java"
     id "maven-publish"
