--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # project properties
 groupPackage=de.alpharogroup
 projectVersion=7.4-SNAPSHOT
+projectSourceCompatibility=1.8
 projectHolderUsername=astrapi69
 projectDescription=Provides interfaces for encrypting and decrypting bytes, text, and files
 projectScmProviderDomain=github.com
