--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.4
+projectVersion=7.5-SNAPSHOT
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=1.8
 projectInceptionYear=2015
