prepare new minor version 7.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.5-SNAPSHOT
+projectVersion=7.5
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=1.8
 projectInceptionYear=2015
@@ -28,7 +28,7 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.38.0
+gradlePluginVersionsVersion=0.39.0
 licenseGradlePluginVersion=0.15.0
 #########################
 # dependencies versions #
