update gradle to new version 7.1
- new field UNKNOWN in enum class KeyFileFormat for unknown file formats
- changed all test dependencies from groupid de.alpharogroup to new groupid io.github.astrapi69
- update gradle-plugin dependency of gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin to new version 0.16.1
- update of test dependency silly-collections to new version to 8.7

--- a/build.gradle
+++ b/build.gradle
@@ -166,5 +166,5 @@ check.dependsOn jacocoTestReport
 dependencies {
     testImplementation("org.testng:testng:$testngVersion")
     testImplementation("org.meanbean:meanbean:$meanbeanVersion")
-    testImplementation("de.alpharogroup:silly-collections:$sillyCollectionsVersion")
+    testImplementation("io.github.astrapi69:silly-collections:$sillyCollectionsVersion")
 }
