--- a/gradle.properties
+++ b/gradle.properties
@@ -37,9 +37,13 @@ licenseGradlePluginVersion=0.16.1
 # test dependencies versions #
 ##############################
 testngVersion=7.4.0
-sillyCollectionsVersion=8.7
+sillyCollectionsVersion=18
 meanbeanVersion=2.0.3
 ##########################
 # for deploy on sonatype #
 ##########################
 systemProp.org.gradle.internal.publish.checksums.insecure=true
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.vfs.watch=true
