--- a/gradle.properties
+++ b/gradle.properties
@@ -28,17 +28,18 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.39.0
+gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
+grgitGradlePluginVersion=4.1.1
+spotlessGradlePluginVersion=6.2.1
 #########################
 # dependencies versions #
 #########################
 ##############################
 # test dependencies versions #
 ##############################
-testngVersion=7.4.0
 sillyCollectionsVersion=18
-meanbeanVersion=2.0.3
+junitJupiterVersion=5.8.2
 ##########################
 # for deploy on sonatype #
 ##########################
