--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.8-SNAPSHOT
+projectVersion=8-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=1.8
+projectSourceCompatibility=11
 projectInceptionYear=2015
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
@@ -30,16 +30,16 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=4.1.1
-spotlessGradlePluginVersion=6.2.1
+grgitGradlePluginVersion=5.0.0
+spotlessGradlePluginVersion=6.8.0
 #########################
 # dependencies versions #
 #########################
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionsVersion=18
-junitJupiterVersion=5.8.2
+sillyCollectionsVersion=18.2
+junitJupiterVersion=5.9.0-RC1
 ##########################
 # for deploy on sonatype #
 ##########################
