--- a/gradle/testing.gradle
+++ b/gradle/testing.gradle
@@ -1,11 +1,11 @@
 test {
-    useTestNG()
+    useJUnitPlatform()
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required.set(true)
+        html.required.set(true)
     }
 }
 
