--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ projectRepositoriesPasswordKey=ossrhPassword
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.8.0
+spotlessGradlePluginVersion=6.9.0
 #########################
 # dependencies versions #
 #########################
@@ -39,7 +39,7 @@ spotlessGradlePluginVersion=6.8.0
 # test dependencies versions #
 ##############################
 sillyCollectionsVersion=18.2
-junitJupiterVersion=5.9.0-RC1
+junitJupiterVersion=5.9.0
 ##########################
 # for deploy on sonatype #
 ##########################
