update of gradle plugin dependency com.github.ben-manes.versions.gradle.plugin to new minor version 0.43.0
- update of gradle-plugin dependency 'com.diffplug.spotless:spotless-plugin-gradle' in version 6.11.0
- update of test dependency junit-jupiter-api to new version 5.9.1
- update of test dependency silly-collection to new version to 20.1
- removed unsupported algorithm MD4 from the enum ChecksumAlgorithm

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=8.4-SNAPSHOT
+projectVersion=8.4
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=11
 projectInceptionYear=2015
@@ -28,18 +28,18 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.42.0
+gradlePluginVersionsVersion=0.43.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.9.0
+spotlessGradlePluginVersion=6.11.0
 #########################
 # dependencies versions #
 #########################
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionsVersion=18.2
-junitJupiterVersion=5.9.0
+sillyCollectionVersion=20.1
+junitJupiterVersion=5.9.1
 ##########################
 # for deploy on sonatype #
 ##########################
