--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    testImplementation("io.github.astrapi69:silly-collections:$sillyCollectionsVersion")
+    testImplementation("io.github.astrapi69:silly-collection:$sillyCollectionVersion")
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
 }
