--- a/gradle.properties
+++ b/gradle.properties
@@ -28,18 +28,18 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.42.0
+gradlePluginVersionsVersion=0.47.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.9.0
+grgitGradlePluginVersion=5.2.0
+spotlessGradlePluginVersion=6.19.0
 #########################
 # dependencies versions #
 #########################
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionsVersion=18.2
-junitJupiterVersion=5.9.0
+sillyCollectionVersion=21
+junitJupiterVersion=5.10.0-M1
 ##########################
 # for deploy on sonatype #
 ##########################
