--- a/gradle/licensing.gradle
+++ b/gradle/licensing.gradle
@@ -8,6 +8,7 @@ license {
               "**/LICENSE",
               "**/NOTICE",
               "**/*.xml",
+              "**/package-info.java",
               "**/*.xsl",
               "**/*.xsd",
               "**/*.dtd",
