--- a/gradle.properties
+++ b/gradle.properties
@@ -39,7 +39,7 @@ spotlessGradlePluginVersion=6.19.0
 # test dependencies versions #
 ##############################
 sillyCollectionVersion=21
-junitJupiterVersion=5.10.0-M1
+junitJupiterVersion=5.10.0-RC1
 ##########################
 # for deploy on sonatype #
 ##########################
