added new enum field value 'UNKNOWN' to all enum classes for default return value if the enum value is resolved over a string value
- update gradle to new version 8.3
- update of gradle plugin dependency 'com.github.ben-manes.versions.gradle.plugin' to the new minor version 0.48.0
- update of gradle-plugin dependency 'com.diffplug.spotless:spotless-plugin-gradle' in version 6.21.0
- update of test dependency junit-jupiter-api to the new version 5.10.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,10 +28,10 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.47.0
+gradlePluginVersionsVersion=0.48.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.2.0
-spotlessGradlePluginVersion=6.19.0
+spotlessGradlePluginVersion=6.21.0
 #########################
 # dependencies versions #
 #########################
@@ -39,7 +39,7 @@ spotlessGradlePluginVersion=6.19.0
 # test dependencies versions #
 ##############################
 sillyCollectionVersion=21
-junitJupiterVersion=5.10.0-RC1
+junitJupiterVersion=5.10.0
 ##########################
 # for deploy on sonatype #
 ##########################
