--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=8.7
+projectVersion=8.8-SNAPSHOT
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=11
 projectInceptionYear=2015
