--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,7 @@ spotlessGradlePluginVersion=6.21.0
 # test dependencies versions #
 ##############################
 sillyCollectionVersion=21
+meanbeanVersion=3.0.0-M9
 junitJupiterVersion=5.10.0
 ##########################
 # for deploy on sonatype #
