--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
+file-worker-version = "17.3"
 gradle-plugin-grgit-version = "5.2.2"
 gradle-plugin-license-version = "0.16.1"
 gradle-plugin-spotless-version = "7.0.0.BETA1"
 gradle-plugin-version-catalog-update-version = "0.8.4"
 gradle-plugin-versions-version = "0.51.0"
+jsoup-version = "1.18.1"
 junit-jupiter-params-version = "5.11.0-M2"
 junit-jupiter-version = "5.11.0-M2"
 junit-platform-launcher-version = "1.11.0-M2"
@@ -11,6 +13,8 @@ meanbean-version = "3.0.0-M9"
 silly-collection-version = "27.1"
 
 [libraries]
+file-worker = { module = "io.github.astrapi69:file-worker", version.ref = "file-worker-version" }
+jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup-version" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter-version" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter-params-version" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher-version" }
@@ -19,6 +23,8 @@ silly-collection = { module = "io.github.astrapi69:silly-collection", version.re
 
 [bundles]
 unit-testing = [
+    "file-worker",
+    "jsoup",
     "junit-jupiter",
     "junit-jupiter-params",
     "meanbean",
