created a new 9.4-SNAPSHOT version for the next development cycle

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=9.3
+projectVersion=9.4-SNAPSHOT
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=17
 projectInceptionYear=2015
